"feat:  ocultando senhas e email do admin com variaveis de ambiente"