@@ -1,5 +1,4 @@
 package com.claudio.dev.raphabarber.config;
-
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -13,14 +12,11 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
@@ -35,38 +31,29 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .authorizeHttpRequests(authz -> authz
-                // Endpoints de Auth são públicos
-                .requestMatchers("/registrar", "/login").permitAll()
-                
-                // Visualizar serviços é público (para qualquer um ver no site)
-                .requestMatchers(HttpMethod.GET, "/servicos/**").permitAll()
-                
-                // Gerenciar serviços (Criar, Editar, Deletar) é apenas para ADMIN
-                .requestMatchers(HttpMethod.POST, "/servicos/**").hasRole("ADMIN")
-                .requestMatchers(HttpMethod.PUT, "/servicos/**").hasRole("ADMIN")
-                .requestMatchers(HttpMethod.DELETE, "/servicos/**").hasRole("ADMIN")
-                
-                // Agendamentos exigem que o usuário esteja logado
-                .requestMatchers("/agendamentos/**").authenticated()
-                
-                // Qualquer outra requisição precisa de autenticação
-                .anyRequest().authenticated()
-            )
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(authz -> authz
+                        .requestMatchers("/auth/registrar", "/auth/login").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/servicos/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/servicos/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/servicos/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/servicos/**").hasRole("ADMIN")
+                        .requestMatchers("/agendamentos/**").authenticated()
+                        .anyRequest().authenticated()
+                )
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:5174"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
